--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,10 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VibeIt - Music On The Go</title>
     <link href="assets/css/home.css" rel="stylesheet" />
+    <link href="assets/css/Navbar.css" media="screen and (min-width: 1100px)" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/d5b2540b36.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="logo">
+                <a class="nav-link" href="./index.html">
+                    <img src="./assets/images/pd10-removebg-preview.png" />
+                    <span class="link-text">Vibe It</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./index.html">
+                    <img src="./assets/images/home.png" alt="Home" />
+                    <span class="link-text">Home</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./about.html">
+                    <img src="./assets/images/about.png" alt="About us" />
+                    <span class="link-text">About us</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./library.html">
+                    <img src="./assets/images/library.png" alt="Library" />
+                    <span class="link-text">Library</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <img src="./assets/images/home.png" alt="Request Songs" />
+                    <span class="link-text">Request Songs</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <main>
         <!-- Top container -->
         <div class="containertop"></div>
