--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./index.html">
-                    <img src="/assets/images/home.png" alt="Home" />
+                    <img src="./assets/images/home.png" alt="Home" />
                     <span class="link-text">Home</span>
                 </a>
             </li>
