--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="containertop">
             <div class="profile-dropdown">
                 <button class="profile-button">
-                    <img src="assets/images/profile-icon.jpg" alt="Profile" class="profile-icon" />
+                    <img src="assets/images/Kween-Yasmins-1024x576.png" alt="Profile" class="profile-icon" />
                 </button>
                 <div class="dropdown-menu">
                     <a href="account.html">Account</a>
