--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                     </div>
                     <div class="albumitem" onclick="redirectToPodcast5()">
                         <img class="cover-setting" src="assets/images/cover/6.png" />
-                        <span class="songName">,di pinili,rebound</span>
-                        <span class="songArtist">,ni-love bomb at pang casual lang</span>
+                        <span class="songName">di pinili,rebound</span>
+                        <span class="songArtist">ni-love bomb at pang casual lang</span>
                     </div>
                     <div class="albumitem" onclick="redirectToPodcast6()">
                         <img class="cover-setting" src="assets/images/cover/1.png" />
@@ -314,6 +314,50 @@
                     </div>
                 </div>
             </div>
+
+            <div class="Recommendation">
+                <div class="album"></div>
+                <h1 class="head-recommend">Albums</h1>
+                <div class="recommend-list">
+                    <!-- Song items -->
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/SOS.png" />
+                        <span class="songName">SOS Deluxe: LANA</span>
+                        <span class="songArtist">SZA</span>
+                    </div>
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/gnx.png" />
+                        <span class="songName">GNX</span>
+                        <span class="songArtist">Kendrick Lamar</span>
+                    </div>
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/hitmehard.png" />
+                        <span class="songName">HIT ME HARD AND SOFT</span>
+                        <span class="songArtist">Billie Eilish</span>
+                    </div>
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/rosiealbum.png" />
+                        <span class="songName">rosie</span>
+                        <span class="songArtist">ROSE</span>
+                    </div>
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/freudian.png" />
+                        <span class="songName">FREUDIAN</span>
+                        <span class="songArtist">Daniel Caesar</span>
+                    </div>
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/langit.png" />
+                        <span class="songName">Langit Mong Bughaw</span>
+                        <span class="songArtist">December Avenue</span>
+                    </div>
+                    <div class="albumitem">
+                        <img class="cover-setting" src="assets/images/albumcover/fuschsia.png" />
+                        <span class="songName">Fuschsiang Pag-Ibig</span>
+                        <span class="songArtist">Silent Sanctuary</span>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </main>
